# shepherd

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_claim.yml
.github/workflows/: ci.yml  lane-c-linux-probe.yml  release.yml
commons-vcs/tests/support/: oracle.py
commons-vcs/tests/support/profiles/: __init__.py
docs/_drafts/: state-of-project.md
docs/_generated/shepherd/: source-state.json
docs/_generated/shepherd/python-api/: public-symbols.json
docs/_src/shepherd/: conftest.py  test_docs_system.py  test_real_wheel_smoke.py
docs/_src/shepherd/_sim/: cli-help.json  transcripts.json
docs/_src/shepherd/_sim/shepherd/: __init__.py
docs/_src/shepherd/quickstart/: hello.py  test_world_hero.py  world_hero.py
docs/_src/shepherd/tutorials/first_app/: app.py  test_first_app.py
docs/_system/: mkdocs.internal.yml  mkdocs.yml  pages.yml  run.py
docs/_system/scripts/: _facade.py  check_names.py  check_shepherd_docs.py  check_shepherd_docs_workflows.py  gen_cli_reference.py  gen_shepherd_api_inventory.py  gen_shepherd_ref_pages.py  pages.py  promote.py
docs/shepherd/: index.md  roadmap.md
docs/shepherd/_templates/: concept-page.md  guide-page.md  quickstart-page.md  reference-page.md  tutorial-page.md  workflow-page.md
docs/shepherd/concepts/: effects.md  index.md  permissions.md  placements.md  providers.md  runs.md  runtime-substrate.md  tasks.md  workflows.md  workspaces.md
docs/shepherd/guides/: configure-provider.md  debug-your-first-run.md  deterministic-demo.md  grant-repo-access.md  index.md  live-acceptance-demo.md  package-a-workflow.md  route-tasks-to-models.md  run-a-workflow.md  test-shepherd-code.md
docs/shepherd/reference/: capability-registry.md  cli.md  config-resolution.md  index.md  project-manifest.md  provider-config.md  python-api.md  source-state.md  workflow-manifest.md
docs/shepherd/reference/api/: AmbientWorldAccessRefused.md  AmbiguousTaskBody.md  Artifact.md  Changeset.md  ChangesetStat.md  DeliveryException.md  DeliveryFailed.md  EffectNotPermitted.md  EffectSurfaceEmpty.md  EffectSurfaceTooWide.md  Flow.md  FlowControlClient.md  GitRepo.md  GitRepoBasis.md  GitRepoGrant.md  Match.md  May.md  OverbroadHandler.md  Permissive.md  Plan.md  PlanNotExtractable.md  ReadOnly.md  ReadWrite.md  Run.md  RunInProgress.md  RunOutput.md  RunRef.md  ShepherdWorkspace.md  Subset.md  Workspace-class.md  WorkspaceRun.md  WorkspaceTask.md  ask.md  current_binding.md  deliver.md  emit_artifact.md  handle.md  open.md  task.md  tell.md  (+1 more)
docs/shepherd/start/: index.md  install.md
docs/shepherd/stylesheets/: extra.css
docs/shepherd/tutorials/: first-shepherd-app.md  index.md
docs/shepherd/workflows/: index.md
docs/shepherd/workflows/authoring/: design-refinement.md  pr-review.md
examples/notebooks/visual_artifact/notebooks/: _usecase_template.ipynb  model_right_sizing_internals.ipynb  model_right_sizing_lab.ipynb  visual_pipeline_recovery.ipynb  visual_pipeline_recovery_internals.ipynb  visual_variant_studio.ipynb  visual_variant_studio_internals.ipynb
examples/notebooks/visual_artifact/sample_outputs/static-render/: model_right_sizing_internals.html  model_right_sizing_lab.html  visual_pipeline_recovery.html  visual_pipeline_recovery_internals.html  visual_variant_studio.html  visual_variant_studio_internals.html
examples/notebooks/visual_artifact/sample_outputs/static-render/scripts/: nb_shot.py  render_artifacts.py  render_uc3.py
examples/notebooks/visual_artifact/shepherd_usecases/visual_artifact/: launch.py  recovery_core.py  render.py  right_sizing_core.py  tasks.py  tile.py
examples/quickstart/: README.md  agent_task.py  claude_readme.py  world_channel.py
examples/workspace-handles/: README.md  _support.py  apply_onto_moved_workspace.py  best_of_n.py  retry_until_acceptable.py
integration-tests/: conftest.py  test_authority_match_integration.py  test_d2_boundary.py  test_examples.py  test_p030_v011_launch_helper_validation.py  test_prelaunch_convergence_kernel.py  test_quickstart_core.py  test_run_path_guard.py  test_shepherd2_skeleton.py  test_v011_launch_helpers.py
packaging/shepherd-ai/: build.py
scripts/: check_executed_evidence.py
shepherd/docs/guides/: codex-provider.md
shepherd/extras/banking/: pyproject.toml
shepherd/extras/banking/src/shepherd_banking/: __init__.py
shepherd/extras/banking/src/shepherd_banking/tasks/: query.py  transfer.py
shepherd/extras/coding/: pyproject.toml
shepherd/extras/coding/src/shepherd_coding/: __init__.py
shepherd/extras/coding/src/shepherd_coding/contexts/: effects.py
shepherd/extras/coding/src/shepherd_coding/tasks/: analyze_code.py  checkout_pr.py  configure_quality_gate.py  fetch_pr.py  generate_fixes.py  generate_pr_description.py  review.py  review_pr.py  run_formatter.py  run_linter.py  run_tests.py  run_type_checker.py  triage.py  triage_pr.py  validate_issues.py
shepherd/extras/coding/src/shepherd_coding/workflows/: entrypoints.py
shepherd/extras/coding/src/shepherd_coding/workflows/pr_review/: config.py  pipeline.py
shepherd/extras/coding/src/shepherd_coding/workflows/quality_gate/: pipeline.py
shepherd/extras/coding/tests/integration/: test_real_inference.py
shepherd/extras/trace-viewer/: pyproject.toml
shepherd/extras/trace-viewer/src/shepherd_trace_viewer/: durable_reader.py
shepherd/integration-tests/: conftest.py  test_appendix_c_quickstart.py  test_commons_vcs_convergence.py  test_env_hygiene.py  test_import_boundaries.py  test_package_imports.py
shepherd2/src/shepherd2/schemas/: run_outputs.py
shepherd2/src/shepherd2/vnext/: skeleton.py
shepherd2/tests/: test_run_outputs_schema.py  test_skeleton_imports.py
