[project]
name = "shepherd-banking"
version = "0.2.0"
description = "Banking domain package for the Shepherd framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Shepherd Team" }]
keywords = ["ai", "agents", "banking", "finance", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "shepherd-core",
    "shepherd-runtime",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[dependency-groups]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
]
lint = ["ruff>=0.5.0,<1.0.0"]
typing = [
    "mypy>=1.10.0,<2.0.0",
]

[project.entry-points."shepherd.domains"]
banking = "shepherd_banking:BankingDomain"

[project.entry-points."shepherd.contexts"]
banking = "shepherd_banking.contexts:BankingContext"

[project.entry-points."shepherd.effects"]
banking = "shepherd_banking.contexts.effects"

[project.entry-points."shepherd.packages"]
banking = "shepherd_banking"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shepherd-core = { workspace = true }
shepherd-runtime = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/shepherd_banking"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

# Ruff: see ruff.toml at workspace root.

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
