[project]
name = "shepherd-trace-viewer"
version = "0.3.0"
description = "Local viewer for durable Shepherd task-trace revisions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Shepherd Team" }]
keywords = ["ai", "agents", "vcscore", "trace", "visualization", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# v1 Phase A: the viewer reads a VcsCore repo via the `git` CLI and has no
# runtime Python dependency on vcs_core or shepherd-runtime. The Shepherd
# resolver/overlay (Phase B) adds optional deps once the migration lands.
dependencies = []

[project.optional-dependencies]
# Dev-only: the fixture generator drives the real vcs_core package to emit
# genuine .vcscore repos. Not needed to run the viewer.
fixtures = ["pygit2>=1.13.0", "pydantic>=2.0", "click>=8.0", "tomli-w>=1.0"]

[project.scripts]
# Ad-hoc entry point for v1. Folds into the `shepherd trace` subcommand once
# the top-level `shepherd` CLI lands (see PROPOSAL §3.2).
shepherd-trace-viewer = "shepherd_trace_viewer.cli:main"

[dependency-groups]
test = [
    "shepherd2",
    "pytest>=8.0.0,<9.0.0",
    "jsonschema>=4.0.0,<5.0.0",
]
lint = ["ruff>=0.5.0,<1.0.0"]

[tool.uv.sources]
shepherd2 = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shepherd_trace_viewer"]
